# typed-service-example

./: Makefile.toml  README.md  base_makefile.toml
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml
backend/src/: main.rs
frontend/: .gitignore  Dockerfile  Makefile.toml  capacitor.config.json  package.json
frontend/src/components/: Hello.tsx
frontend/src/pages/: Home.tsx
istio/: backend.yaml  frontend.yaml  gateway.yaml
proto/: hello.proto
