[package]
name = "backend"
version = "0.1.0"
authors = ["haryu703"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.0"
tokio = { version = "0.2", features = ["macros"] }
prost = "0.6.1"
env_logger = "0.7.1"
log = "0.4.8"

[build-dependencies]
tonic-build = "0.2"
